--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "for all my bitch niggas",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "NODE_ENV=development nodemon -r dotenv/config app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^9.0.0",
+    "dotenv": "^8.2.0",
     "fastify": "^2.11.0",
     "fastify-boom": "^0.1.0",
     "fastify-env": "^1.0.1",
